# tr_build

./: .gitignore  README.md  config.py  pyproject.toml  stamp_hashes.py
Installer/: README.md  stamp_hashes.py  transcrire.nsi
cli/: __init__.py  main.py  menu.py  review.py  rss.py  run.py
core/: __init__.py  captions.py  images.py  pipeline.py  transcript.py
domain/: __init__.py  enums.py  models.py  platforms.py
services/: __init__.py  audio.py  gemini.py  groq.py  rss.py
storage/: __init__.py  archives.py  assets.py  db.py  episodes.py
